chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub-webapp
spec:
  selector:
    app: hub-webapp
  ports:
    - port: 3000
      targetPort: 3000
