chart/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hub-webapp
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking

  hostnames:
    - hub.toando.de

  rules:
    - backendRefs:
        - name: hub-webapp
          port: 80
